alb.tf
resource "aws_lb" "alb" {

  name               = "nisha-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets = [
    aws_subnet.public_subnet.id,
    aws_subnet.public_subnet_2.id
  ]
  tags = {
    Name = "nisha-alb"
  }
}
